src/test/ui/macros/macro-match-nonterminal.rs
macro_rules! test { ($a, $b) => (()); } //~ ERROR missing fragment

fn main() {
    test!()
}
